--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,7 +48,7 @@ jobs:
         RESULT=""
         for tag in $(jq -r '.[]' <<< "${TAGS}")
         do
-          # TODO: Need to remove the Docker Hub entry once we really done with the migration
+          # TODO: Need to remove the Docker Hub entry once we are done with the migration
           RESULT="${RESULT},quay.io/${IMAGE_STAGING}:${tag},${IMAGE_STAGING}:${tag},ghcr.io/${IMAGE_STAGING}:${tag}"
           # If we are running the pipeline in the main branch images are pushed in both -testing and PROD repo
           if [ "${GITHUB_REF#refs/heads/}" == main ]
@@ -69,7 +69,7 @@ jobs:
         username: ${{ secrets.QUAY_USERNAME }}
         password: ${{ secrets.QUAY_TOKEN }}
 
-    # TODO: Need to remove this once we're really done with the migration from Docker Hub
+    # TODO: Need to remove this once we're done with the migration from Docker Hub
     - name: Login to Docker Hub
       uses: docker/login-action@v1.12.0
       with:
