feat: Detect updates of debian-slim images
Signed-off-by: Niccolò Fei <niccolo.fei@enterprisedb.com>

--- a/Debian/10/Dockerfile
+++ b/Debian/10/Dockerfile
@@ -1,5 +1,5 @@
 # vim:set ft=dockerfile:
-FROM debian:buster-slim
+FROM debian:buster-20220125-slim
 
 # Do not split the description, otherwise we will see a blank space in the labels
 LABEL name="PostgreSQL Container Images" \
