--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,12 +48,11 @@ jobs:
         RESULT=""
         for tag in $(jq -r '.[]' <<< "${TAGS}")
         do
-          # TODO: Need to remove the Docker Hub entry once we are done with the migration
-          RESULT="${RESULT},quay.io/${IMAGE_STAGING}:${tag},${IMAGE_STAGING}:${tag},ghcr.io/${IMAGE_STAGING}:${tag}"
+          RESULT="${RESULT},quay.io/${IMAGE_STAGING}:${tag},ghcr.io/${IMAGE_STAGING}:${tag}"
           # If we are running the pipeline in the main branch images are pushed in both -testing and PROD repo
           if [ "${GITHUB_REF#refs/heads/}" == main ]
           then
-            RESULT="${RESULT},quay.io/${IMAGE_RELEASE}:${tag},${IMAGE_RELEASE}:${tag},ghcr.io/${IMAGE_RELEASE}:${tag}"
+            RESULT="${RESULT},quay.io/${IMAGE_RELEASE}:${tag},ghcr.io/${IMAGE_RELEASE}:${tag}"
           fi
         done
         echo "::set-output name=tags::${RESULT%,}"
@@ -68,13 +67,6 @@ jobs:
         registry: quay.io/enterprisedb
         username: ${{ secrets.QUAY_USERNAME }}
         password: ${{ secrets.QUAY_TOKEN }}
-
-    # TODO: Need to remove this once we're done with the migration from Docker Hub
-    - name: Login to Docker Hub
-      uses: docker/login-action@v1.12.0
-      with:
-        username: ${{ secrets.DOCKER_HUB_USER }}
-        password: ${{ secrets.DOCKER_HUB_SECRET }}
 
     - name: Log in to the GitHub Container registry
       uses: docker/login-action@v1.12.0
