--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,6 +75,27 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
+    - name: Build and load
+      uses: docker/build-push-action@v2.9.0
+      with:
+        context: ${{ matrix.dir }}
+        file: ${{ matrix.file }}
+        secrets: |
+          "cs_script=${{ secrets.CS_SCRIPT }}"
+        # Available architecture on UBI8 are: linux/amd64, linux/s390x, linux/ppc64le
+        platforms: ${{ matrix.platforms }}
+        push: false
+        load: true
+        tags: ${{ steps.docker-meta.outputs.tags }}
+
+    - name: Dockle scan
+      uses: erzz/dockle-action@v1.1.1
+      with:
+        image: "quay.io/${{ env.IMAGE_STAGING }}:${{ matrix.tags[0] }}"
+        exit-code: '1'
+        failure-threshold: WARN
+        accept-filenames: usr/share/cmake/Templates/Windows/Windows_TemporaryKey.pfx,etc/trusted-key.key,usr/share/doc/perl-IO-Socket-SSL/certs/server_enc.p12,usr/share/doc/perl-IO-Socket-SSL/certs/server.p12,usr/local/lib/python3.8/site-packages/azure/core/settings.py,usr/share/postgresql-common/pgdg/apt.postgresql.org.asc,usr/local/lib/python3.7/dist-packages/azure/core/settings.py,etc/ssl/private/ssl-cert-snakeoil.key
+
     - name: Build and push
       uses: docker/build-push-action@v2.9.0
       with:
@@ -87,17 +108,6 @@ jobs:
         push: true
         tags: ${{ steps.docker-meta.outputs.tags }}
         labels: ${{ github.ref != 'refs/heads/main' && 'quay.expires-after=7d' || '' }}
-
-    - name: Dockle scan
-      uses: erzz/dockle-action@v1.1.1
-      with:
-        image: "quay.io/${{ env.IMAGE_STAGING }}:${{ matrix.tags[0] }}"
-        exit-code: '1'
-        failure-threshold: WARN
-        accept-filenames: usr/share/cmake/Templates/Windows/Windows_TemporaryKey.pfx,etc/trusted-key.key,usr/share/doc/perl-IO-Socket-SSL/certs/server_enc.p12,usr/share/doc/perl-IO-Socket-SSL/certs/server.p12,usr/local/lib/python3.8/site-packages/azure/core/settings.py,usr/share/postgresql-common/pgdg/apt.postgresql.org.asc,usr/local/lib/python3.7/dist-packages/azure/core/settings.py,etc/ssl/private/ssl-cert-snakeoil.key
-      env:
-        DOCKLE_USERNAME: ${{ secrets.QUAY_USERNAME }}
-        DOCKLE_PASSWORD: ${{ secrets.QUAY_TOKEN }}
 
     - name: Slack Notification
       uses: rtCamp/action-slack-notify@v2
