--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -101,6 +101,7 @@ jobs:
         file: ${{ matrix.file }}
         secrets: |
           "cs_script=${{ secrets.CS_SCRIPT }}"
+          "subscription=${{ secrets.SUBSCRIPTION }}"
         # Available architecture on UBI8 are: linux/amd64, linux/s390x, linux/ppc64le
         platforms: ${{ matrix.platforms }}
         push: true
