--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,6 +76,7 @@ jobs:
           file: ${{ matrix.file }}
           secrets: |
             "cs_script=${{ secrets.CS_SCRIPT }}"
+            "subscription=${{ secrets.SUBSCRIPTION }}"
           push: false
           tags: ${{ steps.docker-meta.outputs.tags }}
           load: true
