--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,6 +82,7 @@ jobs:
         file: ${{ matrix.file }}
         secrets: |
           "cs_script=${{ secrets.CS_SCRIPT }}"
+          "subscription=${{ secrets.SUBSCRIPTION }}"
         push: false
         load: true
         tags: ${{ steps.docker-meta.outputs.tags }}
