feat: Move PostGIS extension from Debian to UBI (#80)
Now the PostGIS extension will be available only on UBI and not on Debian anymore.
Everything related to PostGIS on Debian will be deleted after this patch, including
docker images in the Quay.io registry where they were published.

Co-authored-by: John Long <john.long@enterprisedb.com>
Co-authored-by: Niccolò Fei <niccolo.fei@enterprisedb.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,6 +82,7 @@ jobs:
         file: ${{ matrix.file }}
         secrets: |
           "cs_script=${{ secrets.CS_SCRIPT }}"
+          "subscription=${{ secrets.SUBSCRIPTION }}"
         push: false
         load: true
         tags: ${{ steps.docker-meta.outputs.tags }}
@@ -101,6 +102,7 @@ jobs:
         file: ${{ matrix.file }}
         secrets: |
           "cs_script=${{ secrets.CS_SCRIPT }}"
+          "subscription=${{ secrets.SUBSCRIPTION }}"
         # Available architecture on UBI8 are: linux/amd64, linux/s390x, linux/ppc64le
         platforms: ${{ matrix.platforms }}
         push: true
