--- a/UBI/Dockerfile-postgis.template
+++ b/UBI/Dockerfile-postgis.template
@@ -22,11 +22,11 @@ RUN --mount=type=secret,id=cs_script,target=/run/secrets/cs_script.sh \
 		yum -y install https://download.postgresql.org/pub/repos/yum/reporpms/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm ; \
 	fi ; \
 	yum -y --setopt=tsflags=nodocs install%%YUM_OPTIONS%% \
-		postgresql%%PG_MAJOR_NODOT%%-%%POSTGRES_VERSION%% \
-		postgresql%%PG_MAJOR_NODOT%%-contrib-%%POSTGRES_VERSION%% \
-		postgresql%%PG_MAJOR_NODOT%%-server-%%POSTGRES_VERSION%% \
-		postgresql%%PG_MAJOR_NODOT%%-libs-%%POSTGRES_VERSION%% \
-		pgaudit%%PGAUDIT_VERSION%%_%%PG_MAJOR_NODOT%% \
+		postgresql%%PG_MAJOR%%-%%POSTGRES_VERSION%% \
+		postgresql%%PG_MAJOR%%-contrib-%%POSTGRES_VERSION%% \
+		postgresql%%PG_MAJOR%%-server-%%POSTGRES_VERSION%% \
+		postgresql%%PG_MAJOR%%-libs-%%POSTGRES_VERSION%% \
+		pgaudit%%PGAUDIT_VERSION%%_%%PG_MAJOR%% \
 	; \
 	rm -fr /etc/yum.repos.d/enterprisedb-edb.repo ; \
 	rm -fr /tmp/* ; \
@@ -72,7 +72,7 @@ RUN --mount=type=secret,id=subscription,target=/run/secrets/subscription.sh \
   bash /run/secrets/subscription.sh ; \
   yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm ; \
   yum -y install --enablerepo=ubi-8-codeready-builder,codeready-builder-for-rhel-8-x86_64-rpms \
-  postgis%%POSTGIS_MAJOR%%_%%PG_MAJOR_NODOT%% ; \
+  postgis%%POSTGIS_MAJOR%%_%%PG_MAJOR%% ; \
   yum -y remove epel-release ; \
   subscription-manager remove --all ; \
   subscription-manager unregister ; \
