--- a/UBI/Dockerfile.template
+++ b/UBI/Dockerfile.template
@@ -22,11 +22,11 @@ RUN --mount=type=secret,id=cs_script,target=/run/secrets/cs_script.sh \
 		yum -y install https://download.postgresql.org/pub/repos/yum/reporpms/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm ; \
 	fi ; \
 	yum -y --setopt=tsflags=nodocs install%%YUM_OPTIONS%% \
-		postgresql%%PG_MAJOR_NODOT%%-%%POSTGRES_VERSION%% \
-		postgresql%%PG_MAJOR_NODOT%%-contrib-%%POSTGRES_VERSION%% \
-		postgresql%%PG_MAJOR_NODOT%%-server-%%POSTGRES_VERSION%% \
-		postgresql%%PG_MAJOR_NODOT%%-libs-%%POSTGRES_VERSION%% \
-		pgaudit%%PGAUDIT_VERSION%%_%%PG_MAJOR_NODOT%% \
+		postgresql%%PG_MAJOR%%-%%POSTGRES_VERSION%% \
+		postgresql%%PG_MAJOR%%-contrib-%%POSTGRES_VERSION%% \
+		postgresql%%PG_MAJOR%%-server-%%POSTGRES_VERSION%% \
+		postgresql%%PG_MAJOR%%-libs-%%POSTGRES_VERSION%% \
+		pgaudit%%PGAUDIT_VERSION%%_%%PG_MAJOR%% \
 	; \
 	rm -fr /etc/yum.repos.d/enterprisedb-edb.repo ; \
 	rm -fr /tmp/* ; \
