--- a/UBI/Dockerfile-postgis.template
+++ b/UBI/Dockerfile-postgis.template
@@ -34,11 +34,9 @@ RUN --mount=type=secret,id=cs_script,target=/run/secrets/cs_script.sh \
 
 # Install barman-cloud
 RUN set -xe ; \
-	export CRYPTOGRAPHY_DONT_BUILD_RUST=1 ; \
-	yum -y install python38-pip python38-psycopg2 python38-devel openssl-devel gcc cargo libffi-devel redhat-rpm-config redhat-lsb-core ; \
-	python3 -m pip install --upgrade pip ; \
-	pip3 install -r requirements.txt ; \
-	yum -y remove python38-devel openssl-devel gcc cargo libffi-devel redhat-rpm-config ; \
+	yum -y install python38-pip python38-psycopg2 ; \
+	pip3.8 install --upgrade pip ; \
+	pip3.8 install -r requirements.txt ; \
 	yum -y clean all --enablerepo='*'
 
 # make the sample config easier to munge (and "correct by default")
