chore: Automatic update
Signed-off-by: Niccolò Fei <niccolo.fei@enterprisedb.com>

--- a/UBI/11/Dockerfile.postgis
+++ b/UBI/11/Dockerfile.postgis
@@ -2,25 +2,20 @@
 FROM quay.io/enterprisedb/edb-ubi:8.6-903
 
 # Do not split the description, otherwise we will see a blank space in the labels
-LABEL name="PostgreSQL Container Images" \
+LABEL name="PostgreSQL + PostGIS Container Images" \
       vendor="EnterpriseDB" \
       url="https://www.enterprisedb.com/" \
       version="11.17-1PGDG.rhel8" \
       release="1" \
-      summary="PostgreSQL Container images." \
-      description="This Docker image contains PostgreSQL and Barman Cloud based on RedHat Universal Base Images (UBI) 8."
+      summary="PostgreSQL + PostGIS Container images." \
+      description="This Docker image contains PostgreSQL, PostGIS and Barman Cloud based on RedHat Universal Base Images (UBI) 8."
 
 COPY root/ /
 
-ARG TARGETARCH
-RUN --mount=type=secret,id=cs_script,target=/run/secrets/cs_script.sh \
-	set -xe ; \
-	bash /run/secrets/cs_script.sh ; \
+RUN set -xe ; \
 	yum -y reinstall glibc-common ; \
 	yum -y install hostname rsync tar gettext bind-utils nss_wrapper glibc-locale-source glibc-langpack-en ; \
-	if [ "$TARGETARCH" == 'amd64' ]; then \
-		yum -y install https://download.postgresql.org/pub/repos/yum/reporpms/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm ; \
-	fi ; \
+	yum -y install https://download.postgresql.org/pub/repos/yum/reporpms/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm ; \
 	yum -y --setopt=tsflags=nodocs install \
 		postgresql11-11.17-1PGDG.rhel8 \
 		postgresql11-contrib-11.17-1PGDG.rhel8 \
@@ -28,7 +23,6 @@ RUN --mount=type=secret,id=cs_script,target=/run/secrets/cs_script.sh \
 		postgresql11-libs-11.17-1PGDG.rhel8 \
 		pgaudit13_11 \
 	; \
-	rm -fr /etc/yum.repos.d/enterprisedb-edb.repo ; \
 	rm -fr /tmp/* ; \
 	yum -y clean all --enablerepo='*'
 
@@ -64,13 +58,12 @@ VOLUME /var/lib/postgresql/data
 RUN mkdir /docker-entrypoint-initdb.d
 
 # Postgis
-
 RUN --mount=type=secret,id=subscription,target=/run/secrets/subscription.sh \
   set -xe ; \
   bash /run/secrets/subscription.sh ; \
   yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm ; \
   yum -y install --enablerepo=ubi-8-codeready-builder,codeready-builder-for-rhel-8-x86_64-rpms \
-  postgis31_11 ; \
+  postgis32_11-3.2.3-1.rhel8 ; \
   yum -y remove epel-release ; \
   subscription-manager remove --all ; \
   subscription-manager unregister ; \
