chore: Ignore dockle CIS-DI-0009 checkpoint
Signed-off-by: Niccolò Fei <niccolo.fei@enterprisedb.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,6 +89,8 @@ jobs:
 
     - name: Dockle scan
       uses: erzz/dockle-action@v1
+      env:
+        DOCKLE_IGNORES: CIS-DI-0009
       with:
         image: "quay.io/${{ env.IMAGE_STAGING }}:${{ matrix.tags[0] }}"
         exit-code: '1'
