ci: remove rhsm-host symlink and set a custom subscription name (#125)
* Remove rhsm-host symlink and set a custom subscription name
* Restore the /etc/rhsm-host symlink after we don't need it

Signed-off-by: Niccolò Fei <niccolo.fei@enterprisedb.com>
Signed-off-by: Jonathan Gonzalez V <jonathan.gonzalez@enterprisedb.com>
Co-authored-by: Jonathan Gonzalez V <jonathan.gonzalez@enterprisedb.com>

--- a/UBI/Dockerfile-postgis.template
+++ b/UBI/Dockerfile-postgis.template
@@ -1,5 +1,6 @@
 # vim:set ft=dockerfile:
 FROM quay.io/enterprisedb/edb-ubi:%%UBI_VERSION%%
+ARG SUBSCRIPTION_NAME
 
 # Do not split the description, otherwise we will see a blank space in the labels
 LABEL name="PostgreSQL + PostGIS Container Images" \
@@ -61,7 +62,8 @@ RUN mkdir /docker-entrypoint-initdb.d
 # Postgis
 RUN --mount=type=secret,id=subscription,target=/run/secrets/subscription.sh \
   set -xe ; \
-  bash /run/secrets/subscription.sh ; \
+  rm -f /etc/rhsm-host ; \
+  SUBSCRIPTION_NAME="${SUBSCRIPTION_NAME}" bash /run/secrets/subscription.sh ; \
   yum -y install https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm ; \
   yum -y install --enablerepo=ubi-8-codeready-builder,codeready-builder-for-rhel-8-x86_64-rpms \
   postgis%%POSTGIS_MAJOR%%_%%PG_MAJOR%%-%%POSTGIS_VERSION%% ; \
@@ -70,6 +72,7 @@ RUN --mount=type=secret,id=subscription,target=/run/secrets/subscription.sh \
   subscription-manager unregister ; \
   subscription-manager clean ; \
   yum -y clean all --enablerepo='*' ; \
+  ln -sf /run/secrets/rhsm /etc/rhsm-host ; \
   rm /var/log/rhsm/rhsm.log
 
 COPY ./initdb-postgis.sh /docker-entrypoint-initdb.d/10_postgis.sh
