fix: Use CloudSmith  for ppc64le packages (#132)
Signed-off-by: Niccolò Fei <niccolo.fei@enterprisedb.com>

--- a/UBI/Dockerfile.template
+++ b/UBI/Dockerfile.template
@@ -21,7 +21,7 @@ RUN --mount=type=secret,id=cs_script,target=/run/secrets/cs_script.sh \
 			amd64) \
 					yum -y install "${base_url}/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm" ;; \
 			ppc64le) \
-					yum -y install "${base_url}/EL-8-ppc64le/pgdg-redhat-repo-latest.noarch.rpm" ;; \
+					bash /run/secrets/cs_script.sh ;; \
 			s390x) \
 					bash /run/secrets/cs_script.sh ;; \
 			*) \
@@ -37,7 +37,7 @@ RUN --mount=type=secret,id=cs_script,target=/run/secrets/cs_script.sh \
 		postgresql%%PG_MAJOR%%-libs-%%POSTGRES_VERSION%% \
 		pgaudit%%PGAUDIT_VERSION%%_%%PG_MAJOR%% \
 	; \
-	rm -fr /etc/yum.repos.d/enterprisedb-edb.repo ; \
+	rm -fr /etc/yum.repos.d/enterprisedb-*.repo ; \
 	rm -fr /tmp/* ; \
 	yum -y clean all --enablerepo='*'
 
