--- a/UBI/12/Dockerfile.multilang
+++ b/UBI/12/Dockerfile.multilang
@@ -24,6 +24,8 @@ RUN --mount=type=secret,id=cs_script,target=/run/secrets/cs_script.sh \
 					bash /run/secrets/cs_script.sh ;; \
 			s390x) \
 					bash /run/secrets/cs_script.sh ;; \
+			arm64) \
+                    yum -y install "${base_url}/EL-8-aarch64/pgdg-redhat-repo-latest.noarch.rpm" ;; \
 			*) \
 					exit 1 ;; \
 	esac ; \
