--- a/UBI/13/Dockerfile
+++ b/UBI/13/Dockerfile
@@ -20,6 +20,8 @@ RUN --mount=type=secret,id=cs_script,target=/run/secrets/cs_script.sh \
 	case $ARCH in \
 			amd64) \
 					yum -y install "${base_url}/EL-8-x86_64/pgdg-redhat-repo-latest.noarch.rpm" ;; \
+			arm64) \
+					yum -y install "${base_url}/EL-8-aarch64/pgdg-redhat-repo-latest.noarch.rpm" ;; \
 			ppc64le) \
 					bash /run/secrets/cs_script.sh ;; \
 			s390x) \
