chore: set provenance to false
The provenance option it's adding some unneded data like `unknown` architectures
to the image, we need to set this option to false.

Signed-off-by: Jonathan Gonzalez V <jonathan.gonzalez@enterprisedb.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -79,6 +79,7 @@ jobs:
             "cs_script=${{ secrets.CS_SCRIPT }}"
             "subscription=${{ secrets.SUBSCRIPTION }}"
           push: false
+          provenance: false
           tags: ${{ env.TAGS }}
           load: true
           build-args: |
