--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,6 +77,7 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: ${{ matrix.dir }}
+        provenance: false
         file: ${{ matrix.file }}
         secrets: |
           "cs_script=${{ secrets.CS_SCRIPT }}"
@@ -108,6 +109,7 @@ jobs:
           "subscription=${{ secrets.SUBSCRIPTION }}"
         # Available architecture on UBI8 are: linux/amd64, linux/s390x, linux/ppc64le, linux/arm64
         platforms: ${{ matrix.platforms }}
+        provenance: false
         push: true
         tags: ${{ env.TAGS }}
         labels: ${{ github.ref != 'refs/heads/main' && 'quay.expires-after=7d' || '' }}
