chore: update ubuntu and python versions
Signed-off-by: Jonathan Gonzalez V <jonathan.gonzalez@enterprisedb.com>

--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -11,11 +11,14 @@ defaults:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
         with:
           token: ${{ secrets.REPO_GHA_PAT }}
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
       - name: Update docker-entrypoint
         uses: nick-fields/retry@v2
         with:
