--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -70,3 +70,12 @@ jobs:
           access_token: ${{ secrets.REPO_GHA_PAT }}
           branch: main
           enforce_admins: ${{ steps.disable_include_admins.outputs.initial_status }}
+      - name: Slack Notification
+        uses: rtCamp/action-slack-notify@v2
+        if: ${{ failure() && github.ref == 'refs/heads/main' }}
+        env:
+          SLACK_COLOR: ${{ job.status }}
+          SLACK_ICON: https://avatars.githubusercontent.com/u/44036562?size=48
+          SLACK_USERNAME: ghBot
+          SLACK_WEBHOOK: ${{ secrets.SLACK_WEBHOOK }}
+          SLACK_MESSAGE: Failure updating PostgreSQL images
