--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -42,7 +42,7 @@ jobs:
           command: |
             # pip-tools provides pip-compile used by update.sh
             export PATH=$HOME/.local/bin:$PATH
-            pip3 install --upgrade pip-tools cloudsmith-cli pip
+            pip3 install --upgrade pip-tools cloudsmith-cli pip pyyaml
             echo "Updating UBI images"
             ./UBI/update.sh
             echo "Updating Debian images"
