--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -11,11 +11,14 @@ defaults:
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
         with:
           token: ${{ secrets.REPO_GHA_PAT }}
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.8'
       - name: Update docker-entrypoint
         uses: nick-fields/retry@v2
         with:
@@ -39,7 +42,7 @@ jobs:
           command: |
             # pip-tools provides pip-compile used by update.sh
             export PATH=$HOME/.local/bin:$PATH
-            pip3 install --upgrade pip-tools cloudsmith-cli pip
+            pip3 install --upgrade pip-tools cloudsmith-cli pip pyyaml
             echo "Updating UBI images"
             ./UBI/update.sh
             echo "Updating Debian images"
