--- a/UBI/Dockerfile-postgis.template
+++ b/UBI/Dockerfile-postgis.template
@@ -35,7 +35,6 @@ RUN set -xe ; \
 		postgresql%%PG_MAJOR%%-libs-%%POSTGRES_VERSION%% \
 		pgaudit%%PGAUDIT_VERSION%%_%%PG_MAJOR%% \
 		pg_failover_slots_%%PG_MAJOR%% \
-		pgrouting_%%PG_MAJOR%% \
 	; \
 	rm -fr /tmp/* ; \
 	yum -y clean all --enablerepo='*'
@@ -87,7 +86,9 @@ RUN --mount=type=secret,id=subscription,target=/run/secrets/subscription.sh \
 					exit 1 ;; \
 	esac ; \
 	yum -y install --enablerepo=ubi-8-codeready-builder,codeready-builder-for-rhel-8-${BUILDARCH}-rpms \
-		postgis%%POSTGIS_MAJOR%%_%%PG_MAJOR%%-%%POSTGIS_VERSION%% ; \
+		postgis%%POSTGIS_MAJOR%%_%%PG_MAJOR%%-%%POSTGIS_VERSION%% \
+		pgrouting_%%PG_MAJOR%% \
+	; \
 	yum -y remove epel-release ; \
 	subscription-manager remove --all ; \
 	subscription-manager unregister ; \
