--- a/UBI/Dockerfile-multiarch.template
+++ b/UBI/Dockerfile-multiarch.template
@@ -20,6 +20,7 @@ RUN --mount=type=secret,id=cs_token \
 	pg_failover_slots_pkg="pg_failover_slots_%%PG_MAJOR%%" ; \
 	pg_squeeze_pkg="pg_squeeze_%%PG_MAJOR%%" ; \
 	pg_audit_pkg="pgaudit%%PGAUDIT_VERSION%%_%%PG_MAJOR%%" ; \
+	pgvector="pgvector_%%PG_MAJOR%%" ; \
 	case $ARCH in \
 			amd64) \
 					yum -y install "${base_url}/EL-%%UBI_MAJOR_VERSION%%-x86_64/pgdg-redhat-repo-latest.noarch.rpm" ; \
@@ -40,7 +41,8 @@ RUN --mount=type=secret,id=cs_token \
 					pg_failover_slots_pkg="edb-pg%%PG_MAJOR%%-pg-failover-slots1" ; \
 					pg_squeeze_pkg="edb-pg%%PG_MAJOR%%-pg-squeeze1" ; \
 					pg_audit_pkg="edb-pg%%PG_MAJOR%%-pgaudit1" ; \
-					if [ "%%PG_MAJOR%%" -gt "15" ]; then pg_audit_pkg="edb-pg%%PG_MAJOR%%-pgaudit%%PG_MAJOR%%"; fi ;; \
+					if [ "%%PG_MAJOR%%" -gt "15" ]; then pg_audit_pkg="edb-pg%%PG_MAJOR%%-pgaudit%%PG_MAJOR%%"; \
+					pgvector="edb-as%%PG_MAJOR%%-pgvector0" ; fi ;; \
 			*) \
 					exit 1 ;; \
 	esac ; \
@@ -56,6 +58,8 @@ RUN --mount=type=secret,id=cs_token \
 			"$pg_audit_pkg" \
 			"$pg_squeeze_pkg" \
 			"$pg_failover_slots_pkg" \
+	                "$pgvector" \
+
 	; \
 	rm -fr /etc/yum.repos.d/enterprisedb-*.repo ; \
 	rm -fr /tmp/* ; \
